--- a/SRC/templates/mail_page/newsignature.html
+++ b/SRC/templates/mail_page/newsignature.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
-{% block title %} add label {% endblock %}
+{% block title %} New Signature {% endblock %}
 {% block content %}
+    <h2 class="mb-4">New Signature</h2>
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add</button>
+        <button type="submit">add signature</button>
     </form>
 {% endblock %}
