--- a/SRC/templates/mail_page/addlabel.html
+++ b/SRC/templates/mail_page/addlabel.html
@@ -4,6 +4,6 @@
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add</button>
+        <button type="submit">Create</button>
     </form>
 {% endblock %}
