--- a/SRC/templates/mail_page/filter.html
+++ b/SRC/templates/mail_page/filter.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block title %} Filter {% endblock %}
 {% block content %}
-            <h2 class="mb-4">Filter</h2>
+    <h2 class="mb-4">Filter</h2>
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-{#        {{form.sender}}#}
-{#        {{ form.subject }}#}
-{#        {{ form.body }}#}
-{#        {{ form.file }}#}
-{#        {{ form.action}}#}
+        <p>sender: {{ form.sender }}</p>
+        <p>subject: {{ form.subject }}</p>
+        <p>body: {{ form.body|safe }}</p>
+        <p>file: {{ form.file }}</p>
+        <p>action: {{ form.action }}</p>
+        {#        {{ form.as_p }}#}
         <button type="submit">Filter</button>
     </form>
 {% endblock %}
